src/test/resources/Parser/SyntaxErrors/IncompatibleTypesReturn.front
class A {
    int test () {
        return;
    }
}